--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="Az4-sg-PrW">
-    <device id="retina4_0" orientation="portrait">
-        <adaptation id="fullscreen"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Az4-sg-PrW">
+    <device id="ipad9_7" orientation="landscape">
+        <adaptation id="splitview1_2"/>
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
@@ -16,9 +16,9 @@
         <!--Playback-->
         <scene sceneID="qqr-4I-6Cw">
             <objects>
-                <collectionViewController id="yak-cE-mUi" customClass="MainViewController" customModule="Stingtk" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController clearsSelectionOnViewWillAppear="NO" id="yak-cE-mUi" customClass="MainViewController" customModule="Stingtk" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="7JH-vP-Uzz">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="507" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="0.64694368840000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -30,7 +30,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Sting Cell" id="wn0-gC-jEl" customClass="StingCell" customModule="Stingtk" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
+                                <rect key="frame" x="93.5" y="0.0" width="320" height="103"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
@@ -77,18 +77,18 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TjI-mr-Eu1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="547.5" y="32.74647887323944"/>
+            <point key="canvasLocation" x="151" y="34"/>
         </scene>
         <!--Configuration-->
         <scene sceneID="BBH-1f-24n">
             <objects>
-                <viewController title="Configuration" id="sKY-0b-GtB" customClass="StingViewController" customModule="Stingtk" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="sKY-0b-GtB" customClass="StingViewController" customModule="Stingtk" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jgb-pc-X2x"/>
                         <viewControllerLayoutGuide type="bottom" id="rVl-rn-yCL"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="IL7-SC-53c">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="507" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sting #" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W2N-PM-WRG">
@@ -98,7 +98,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waveload" translatesAutoresizingMaskIntoConstraints="NO" id="DSS-g4-Ymn">
-                                <rect key="frame" x="20" y="182" width="280" height="75"/>
+                                <rect key="frame" x="20" y="182" width="467" height="125"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="DSS-g4-Ymn" secondAttribute="height" multiplier="56:15" id="ymd-rN-3EN"/>
                                 </constraints>
@@ -117,7 +117,7 @@
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tyO-e7-KqD">
-                                <rect key="frame" x="197" y="292" width="107" height="38"/>
+                                <rect key="frame" x="384" y="292" width="107" height="38"/>
                                 <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="15"/>
                                 <inset key="contentEdgeInsets" minX="20" minY="10" maxX="20" maxY="10"/>
                                 <state key="normal" title="Zoom Out">
@@ -128,7 +128,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SDr-NV-ToG">
-                                <rect key="frame" x="201" y="40" width="103" height="38"/>
+                                <rect key="frame" x="388" y="40" width="103" height="38"/>
                                 <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="15"/>
                                 <inset key="contentEdgeInsets" minX="15" minY="10" maxX="15" maxY="10"/>
                                 <state key="normal" title="Load Track">
@@ -140,17 +140,42 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EDC-cS-RXP">
-                                <rect key="frame" x="30" y="98" width="260" height="22"/>
+                                <rect key="frame" x="30" y="98" width="447" height="22"/>
                                 <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="18"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ah-Ra-mmM">
-                                <rect key="frame" x="30" y="125" width="260" height="17"/>
+                                <rect key="frame" x="30" y="125" width="447" height="17"/>
                                 <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nfb-Z3-Wpb">
+                                <rect key="frame" x="93.5" y="338" width="320" height="216"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="sKY-0b-GtB" id="ZBB-Cd-1Eo"/>
+                                    <outlet property="delegate" destination="sKY-0b-GtB" id="Ny4-Dd-plL"/>
+                                </connections>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H6g-Hh-8Ba">
+                                <rect key="frame" x="219" y="562" width="71" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="New Sting"/>
+                                <connections>
+                                    <action selector="addSting" destination="sKY-0b-GtB" eventType="touchUpInside" id="2ZR-So-zsh"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dr1-ff-DGX">
+                                <rect key="frame" x="212" y="600" width="84" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Delete Sting">
+                                    <color key="titleColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
+                                </state>
+                                <connections>
+                                    <action selector="deleteSting" destination="sKY-0b-GtB" eventType="touchUpInside" id="cLw-Y0-Tb2"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -168,7 +193,9 @@
                             <constraint firstItem="8ah-Ra-mmM" firstAttribute="trailing" secondItem="EDC-cS-RXP" secondAttribute="trailing" id="SWE-hL-3z9"/>
                             <constraint firstAttribute="trailing" secondItem="DSS-g4-Ymn" secondAttribute="trailing" constant="20" id="aWp-AI-3Kb"/>
                             <constraint firstItem="lRX-bK-xRr" firstAttribute="leading" secondItem="8ah-Ra-mmM" secondAttribute="leading" constant="-15" id="d2L-ma-SaJ"/>
+                            <constraint firstItem="nfb-Z3-Wpb" firstAttribute="top" secondItem="lRX-bK-xRr" secondAttribute="bottom" constant="8" symbolic="YES" id="f3E-ND-Lm7"/>
                             <constraint firstItem="W2N-PM-WRG" firstAttribute="leading" secondItem="IL7-SC-53c" secondAttribute="leading" constant="30" id="krv-06-nMs"/>
+                            <constraint firstItem="nfb-Z3-Wpb" firstAttribute="centerX" secondItem="IL7-SC-53c" secondAttribute="centerX" id="l8c-pT-f35"/>
                             <constraint firstAttribute="trailing" secondItem="EDC-cS-RXP" secondAttribute="trailing" constant="30" id="sSW-hV-xtJ"/>
                             <constraint firstItem="W2N-PM-WRG" firstAttribute="baseline" secondItem="SDr-NV-ToG" secondAttribute="baseline" id="tK0-ur-YpX"/>
                             <constraint firstItem="DSS-g4-Ymn" firstAttribute="leading" secondItem="IL7-SC-53c" secondAttribute="leading" constant="20" id="wes-Sw-WKg"/>
@@ -179,13 +206,14 @@
                     <connections>
                         <outlet property="artistLabel" destination="8ah-Ra-mmM" id="PDI-ff-nfj"/>
                         <outlet property="stingNumberLabel" destination="W2N-PM-WRG" id="8X1-SE-u8r"/>
+                        <outlet property="stingPickerView" destination="nfb-Z3-Wpb" id="jQS-Eo-cCe"/>
                         <outlet property="titleLabel" destination="EDC-cS-RXP" id="mWC-r4-wcL"/>
                         <outlet property="waveformLoadingImageView" destination="DSS-g4-Ymn" id="NRW-rX-Hcg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="17N-rm-diW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="548" y="836"/>
+            <point key="canvasLocation" x="151" y="781"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="29m-fQ-Ok6">
@@ -205,7 +233,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="auo-40-VJW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-323" y="33"/>
+            <point key="canvasLocation" x="-605.625" y="34.859154929577464"/>
         </scene>
     </scenes>
     <resources>
